refactor: one fence-escape helper and one shortSha, plus the recorded one-liners
Markdown.neutralizeFences (sdd-core) replaces four byte-identical ``` -> '''
copies in PlanMdRenderer and PlanDrafter; idempotence is asserted directly.
Shas.shortSha (sdd.cli.review) replaces four byte-identical 7-char-form
copies in SquashApprove, DecisionCommand, CleanCommand and RunContext (the
last reaching into DecisionCommand, a layering inversion); null/blank now
return "(none)" per the reviewed contract rather than the old "?"/"".

Also fixes six one-liners the prior task reviews recorded: the kafka error
vocabulary now renders KAFKA_ROLES instead of a hardcoded literal; kafka
arity errors no longer masquerade as role-vocabulary errors; Orchestrator's
"actualized to nothing" event only mentions declared types when the contract
actually declared any; ReviewReport's RebuildScope.Kind switch is now an
expression so a fourth kind fails to compile rather than throwing at
runtime; the exit-code legend's 2 clause now covers review approve/reject/
redo's decision-side meanings; canonicalizeRestActual skips the actualized
header line like its java-api and kafka siblings.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>